Refined the widget view. Added a latest search label to both the widget view and app journey view.

--- a/SL One trip search/en.lproj/Localizable.strings
+++ b/SL One trip search/en.lproj/Localizable.strings
@@ -26,5 +26,8 @@
 "journeyView.journeyStats.multipleChanges" = "%@ byten";
 "journeyView.journeyStats.travelTime" = "Restid: %@ min";
 
+"journeyView.latestSearch" = "Senaste sökning";
+"journeyView.latestSearch.searching" = "söker...";
+
 "now" = "nu";
 "minutes" = "min";
