More tweaking of the today extension. Making sure that the ext and the app shows the same order of stations. Written more tests for the journey vc and the coordinator.

--- a/SL One trip search/en.lproj/Localizable.strings
+++ b/SL One trip search/en.lproj/Localizable.strings
@@ -29,5 +29,7 @@
 "journeyView.latestSearch" = "Senaste sökning";
 "journeyView.latestSearch.searching" = "söker...";
 
+"journeyView.noStation" = "Ej angiven";
+
 "now" = "nu";
 "minutes" = "min";
