Sorting trips by arrival date and also prints the arrival date in the stats for each journey.

--- a/SL One trip search/sv.lproj/Localizable.strings
+++ b/SL One trip search/sv.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "journeyView.journeyStats.noChanges" = "inga byten";
 "journeyView.journeyStats.oneChange" = "1 byte";
 "journeyView.journeyStats.multipleChanges" = "%@ byten";
-"journeyView.journeyStats.travelTime" = "Restid: %@ min";
+"journeyView.journeyStats.travelTime" = "Framme kl %@, restid: %@ min";
 
 "journeyView.latestSearch" = "Senaste sökning";
 "journeyView.latestSearch.searching" = "Söker...";
