Some refactoring / cleaning up after the notification experiments.

--- a/SL One trip search/en.lproj/Localizable.strings
+++ b/SL One trip search/en.lproj/Localizable.strings
@@ -32,6 +32,11 @@
 "journeyView.journeyStats.multipleChanges" = "%@ byten";
 "journeyView.journeyStats.travelTime" = "Framme kl %@, restid: %@ min";
 
+"notification.body.showInstructions" = "Dra ner / långtryck för att visa";
+"notification.title.tripsNow" = "Resor";
+"notification.title.tripsInMinutes" = "Resor om %@ min";
+"notification.title" = "%@ till %@ från %@";
+
 "journeyView.latestSearch" = "Senaste sökning";
 "journeyView.latestSearch.searching" = "söker...";
 
