Fixing some visual stuff, font sizes etc.

--- a/SL One trip search/en.lproj/Localizable.strings
+++ b/SL One trip search/en.lproj/Localizable.strings
@@ -35,7 +35,7 @@
 "notification.body.showInstructions" = "Dra ner / långtryck för att visa";
 "notification.title.tripsNow" = "Resor";
 "notification.title.tripsInMinutes" = "Resor om %@ min";
-"notification.title" = "%@ till %@ från %@";
+"notification.title" = "%@ från %@ till %@";
 
 "journeyView.latestSearch" = "Senaste sökning";
 "journeyView.latestSearch.searching" = "söker...";
