--- a/SL One trip search/sv.lproj/Localizable.strings
+++ b/SL One trip search/sv.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "notification.body.showInstructions" = "Dra ner / långtryck för att visa";
 "notification.title.tripsNow" = "Resor";
 "notification.title.tripsInMinutes" = "Resor om %@ min";
-"notification.title" = "%@ till %@ från %@";
+"notification.title" = "%@ från %@ till %@";
 
 "journeyView.journeyStats.noChanges" = "inga byten";
 "journeyView.journeyStats.oneChange" = "1 byte";
