Created a journey detail view containing a table vc showing each leg of the selected trip. Created a xib for the uitableviewcell used. Some refactoring to be able to reuse some logic.

--- a/SL One trip search/en.lproj/Localizable.strings
+++ b/SL One trip search/en.lproj/Localizable.strings
@@ -27,6 +27,12 @@
 "product.platformtype.train" = "spår";
 "product.platformtype.boat" = "läge";
 
+"product.singleLetterDescription.bus" = "B";
+"product.singleLetterDescription.metro" = "T";
+"product.singleLetterDescription.tram" = "L";
+"product.singleLetterDescription.train" = "T";
+"product.singleLetterDescription.boat" = "B";
+
 "journeyView.journeyStats.noChanges" = "inga byten";
 "journeyView.journeyStats.oneChange" = "1 byte";
 "journeyView.journeyStats.multipleChanges" = "%@ byten";
@@ -44,3 +50,5 @@
 
 "now" = "nu";
 "minutes" = "min";
+
+"journeyDetail.title" = "Resebeskrivning";
