Added support for walk, and to hide a leg if that parameter is visible in the SL API response. Some refactoring due to the change to support walk.

--- a/SL One trip search/en.lproj/Localizable.strings
+++ b/SL One trip search/en.lproj/Localizable.strings
@@ -42,6 +42,8 @@
 "notification.title.tripsNow" = "Resor";
 "notification.title.tripsInMinutes" = "Resor om %@ min";
 "notification.title" = "%@ från %@ till %@";
+"transporttype.walk" = "Gå";
+"transporttype.walk.singleLetter" = "G";
 
 "journeyView.latestSearch" = "Senaste sökning";
 "journeyView.latestSearch.searching" = "söker...";
